# Electron-Hook

./: .gitmodules  Cargo.toml  README.md  build.rs
crates/electron-hook-build-scripts/: Cargo.toml
crates/electron-hook-build-scripts/src/: lib.rs
src/: asar.rs  lib.rs  linux.rs  macros.rs  paths.rs
src/linux/: hooks.rs  mod.rs
src/macos/: hooks.rs  mod.rs
src/windows/: hooks.rs  mod.rs
