[workspace]
members = [".", "vendor/detours-sys"]

[package]
name = "electron-hook"
description = "In-memory Electron mod loader."
authors = ["Rie Takahashi <megumin@megu.dev>"]
version = "0.2.1"
license = "LGPL-3.0"
homepage = "https://github.com/meguminsama/electron-hook"
repository = "https://github.com/meguminsama/electron-hook"
categories = ["web-programming", "development-tools"]
keywords = ["modding", "electron", "discord", "hook", "detour"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] 

[features]
default = ["uuid", "asar"]
asar = ["dep:asar"]
uuid = ["dep:uuid"]

[dependencies]
ctor = "0.4.2"
dirs = "6.0.0"
libc = "0.2.172"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"], optional = true }

[dependencies.asar]
version = "0.3.0"
default-features = false
features = ["write"]
optional = true

[target.'cfg(windows)'.dependencies]
widestring = "1.2.0"
winapi = { version = "0.3.9", features = ["handleapi", "winuser"] }
detours-sys = { path = "vendor/detours-sys" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.167"
retour = { version = "0.3.1", features = ["static-detour"] }
